# DVU_U

./: .gitignore  ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: frontend-tests.yml  macos-unsigned-dmg.yml  windows-unsigned-nsis.yml
docs/: ICON_INVENTORY.md  PACKAGING_CHECKLIST.md  PROJECT_ANALYSIS.md
scripts/: package-macos-unsigned-dmg.sh  package-windows-unsigned.sh  release-macos-unsigned.sh  release-windows-unsigned.sh  run-with-target-dir.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/domain/: errors.rs  mod.rs  models.rs  state_machine.rs
src-tauri/src/services/: analyzer.rs  app_services.rs  bundle_service.rs  dataverse_client.rs  dataverse_url.rs  mod.rs  reporting.rs  retry.rs  scanner.rs  secrets.rs  session_store.rs  transfer_engine.rs
src-tauri/tests/: dataverse_client.rs  report_export.rs  session_store.rs
src/components/: Stat.tsx
src/features/: DestinationForm.test.tsx  DestinationForm.tsx  HistoryPanel.tsx  SourceManager.test.tsx  SourceManager.tsx  TransferPanel.test.tsx  TransferPanel.tsx
src/lib/: api.test.ts  api.ts  format.test.ts  format.ts  types.ts
src/store/: appStore.test.ts  appStore.ts
