[package]
name = "dataverse_heavy_uploader"
version = "0.1.10"
description = "Reliable Dataverse Uploader Universal (DVU_U)"
authors = ["Dataverse Uploader Universal Team"]
edition = "2021"

[lib]
name = "dataverse_heavy_uploader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
futures-util = "0.3.31"
keyring = "3.6.1"
mime_guess = "2.0.5"
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util"] }
tokio-util = { version = "0.7.13", features = ["io"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
walkdir = "2.5.0"
zip = "0.6.6"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-dialog = "2.0.3"

[dev-dependencies]
wiremock = "0.6.2"
tempfile = "3.15.0"
